  password for wiki accounts, has been adjusted to raise the minimal password
  length from 1 to 8 characters. The initial limit of 1 has been in place since
  MediaWiki 1.26. If you wish to allow shorter passwords, you can over-ride it
  in your LocalSettings following the guidance on MediaWiki.org.
* …

==== Removed configuration ====
* …

=== New user-facing features in 1.40 ===
* Ability to show thumbnails (provided via onSearchResultProvideThumbnail
  hook) for more than NS_FILE titles in Special:Search results.
* …

=== New developer features in 1.40 ===
* The ApiSandbox will now by default request responses in the latest API format,
  rather than the original format. Users can set `formatversion` to a different
  value if needed.
* …

=== External library changes in 1.40 ===

==== New external libraries ====
* …

===== New development-only external libraries =====
* …

==== Changed external libraries ====
* Updated OOUI from v0.44.3 to v0.45.0.
* Updated codex, codex-search, and codex-icons from v0.1.1 to v0.2.1.
* Updated justinrainbow/json-schema from 5.2.11 to 5.2.12.
* Updated symfony/yaml from 5.4.10 to 5.4.12.
* Updated pear/net_smtp from 0.10.0 to 0.10.1.

===== Changed development-only external libraries =====
* …

==== Removed external libraries ====
* jquery.throttle-debounce, deprecated since MediaWiki 1.33.
* …

=== Bug fixes in 1.40 ===
* …

=== Action API changes in 1.40 ===
* New `cancreateaccount` parameter on action=query&meta=userinfo that allows
  you to check if the user can create an account. Some of the errors that have
  previously been returned by action=query&list=users&usprop=cancreate are now
  returned here.
* …

=== Action API internal changes in 1.40 ===
* …

=== Languages updated in 1.40 ===
MediaWiki supports over 350 languages. Many localisations are updated regularly.
Below only new and removed languages are listed, as well as changes to languages
because of Phabricator reports.

* …

=== Breaking changes in 1.40 ===